# amos-abk

./: Makefile  README.md  pyproject.toml
src/amos_abk/: __init__.py  bank.py  pacpic.py  pillow_plugin.py  planar.py  sprite.py
tests/: test_bank.py  test_pacpic.py  test_pillow_plugin.py  test_sprite.py
tests/data/: datas.abk  multi_sprites.abk  pacpic.abk  samples.abk  sprites.abk
