[project]
name = "amos_abk"
description = "Load AMOS banks in Python"
version = "0.1.0"
authors = [
    { name = "Gareth Davidson", email = "gaz@bitplane.net" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "Pillow",
]

[project.urls]
Homepage = "https://bitplane.net/dev/python/amos-abk"
Documentation = "https://bitplane.net/dev/python/amos-abk/pydoc"
Repository = "https://github.com/bitplane/amos-abk"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "coverage",
    "pytest-cov",
    "build",
    "twine",
    "ruff",
    "pydoc-markdown",
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true
